examples/nginx/app-repo/k8s/config-cluster/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    shared-gateway-access: "true"
    istio.io/rev: asm-managed
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: nginx
spec:
  parentRefs:
  - name: istio-gateway
    namespace: gateways
  rules:
  - backendRefs:
    - kind: Service
      name: nginx
      port: 80
