examples/nginx/app-repo/k8s/config-cluster/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: nginx
spec:
  parentRefs:
  - name: istio-gateway
    namespace: gateways
  rules:
  - backendRefs:
    - kind: Service
      name: nginx
      port: 80
